// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryPromo - Top Story should render correctly 1`] = `
.c0 {
  position: relative;
}

.c1 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  margin-bottom: 0.5rem;
  width: 100%;
}

.c2 {
  position: relative;
}

.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #222222;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c6 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c3 {
  display: inline-block;
  vertical-align: top;
}

.c5 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:visited {
  color: #6E6E73;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    width: 33.33%;
    margin-bottom: 0;
  }
}

@media (min-width:80rem) {
  .c1 {
    width: 33.33%;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
    width: initial;
    grid-column: 1 / span 6;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    width: 66.67%;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: 66.67%;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 1 / span 6;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <img
        alt="Alt text"
        src="https://foobar.com/image.png"
      />
    </div>
  </div>
  <div
    class="c3"
  >
    <h3
      class="c4"
    >
      <a
        class="c5"
        href="https://www.bbc.co.uk/news"
      >
        The headline of the promo
      </a>
    </h3>
    <p
      class="c6"
    >
      The summary of the promo
    </p>
    <time>
      12 March 2019
    </time>
  </div>
</div>
`;

exports[`StoryPromo - Top Story with Media Indicator should render correctly 1`] = `
.c7 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c6 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c4 {
  padding: 0.5rem 0.25rem;
  background-color: #FFFFFF;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  color: #222222;
  height: 2rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c8 {
  vertical-align: middle;
  margin: 0 0.25rem;
}

.c0 {
  position: relative;
}

.c1 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  margin-bottom: 0.5rem;
  width: 100%;
}

.c2 {
  position: relative;
}

.c3 {
  position: absolute;
  bottom: 0;
}

.c10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #222222;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c9 {
  display: inline-block;
  vertical-align: top;
}

.c11 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c11:hover,
.c11:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c11:visited {
  color: #6E6E73;
}

@media (max-width:24.9375rem) {
  .c4 {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    width: 33.33%;
    margin-bottom: 0;
  }
}

@media (min-width:80rem) {
  .c1 {
    width: 33.33%;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
    width: initial;
    grid-column: 1 / span 6;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    width: 66.67%;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c9 {
    width: 66.67%;
  }
}

@supports (display:grid) {
  .c9 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 1 / span 6;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <img
        alt="Alt text"
        src="https://foobar.com/image.png"
      />
      <div
        class="c3"
      >
        <div
          aria-hidden="true"
          class="c4"
        >
          <div
            class="c5"
          >
            <svg
              class="c6"
              focusable="false"
              height="12px"
              viewBox="0 0 32 32"
              width="12px"
            >
              <polygon
                points="3,32 29,16 3,0"
              />
            </svg>
            <span
              class="c7"
            >
              Video 2 minutes 15 seconds
            </span>
            <time
              class="c8"
              datetime="PT2M15S"
            >
              2:15
            </time>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c9"
  >
    <h3
      class="c10"
    >
      <a
        class="c11"
        href="https://www.bbc.co.uk/news"
      >
        The headline of the promo
      </a>
    </h3>
    <p
      class="c12"
    >
      The summary of the promo
    </p>
    <time>
      12 March 2019
    </time>
  </div>
</div>
`;

exports[`StoryPromo should render Live promo correctly 1`] = `
.c0 {
  position: relative;
}

.c1 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c2 {
  position: relative;
}

.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #222222;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c7 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c3 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c5 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:visited {
  color: #6E6E73;
}

.c6 {
  color: #B80000;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    width: 33.33%;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c7 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: 66.67%;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <img
        alt="Alt text"
        src="https://foobar.com/image.png"
      />
    </div>
  </div>
  <div
    class="c3"
  >
    <h3
      class="c4"
    >
      <a
        class="c5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="c6"
          dir="ltr"
          lang="en-GB"
        >
          LIVE
           
        </span>
        The headline of the promo
      </a>
    </h3>
    <p
      class="c7"
    >
      The summary of the promo
    </p>
    <time>
      12 March 2019
    </time>
  </div>
</div>
`;

exports[`StoryPromo should render correctly 1`] = `
.c0 {
  position: relative;
}

.c1 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c2 {
  position: relative;
}

.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #222222;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c6 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c3 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c5 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:visited {
  color: #6E6E73;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    width: 33.33%;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c6 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: 66.67%;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <img
        alt="Alt text"
        src="https://foobar.com/image.png"
      />
    </div>
  </div>
  <div
    class="c3"
  >
    <h3
      class="c4"
    >
      <a
        class="c5"
        href="https://www.bbc.co.uk/news"
      >
        The headline of the promo
      </a>
    </h3>
    <p
      class="c6"
    >
      The summary of the promo
    </p>
    <time>
      12 March 2019
    </time>
  </div>
</div>
`;

exports[`StoryPromo with Media Indicator should render correctly 1`] = `
.c7 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c6 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c4 {
  padding: 0.5rem 0.25rem;
  background-color: #FFFFFF;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  color: #222222;
  height: 2rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c8 {
  vertical-align: middle;
  margin: 0 0.25rem;
}

.c0 {
  position: relative;
}

.c1 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c2 {
  position: relative;
}

.c10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #222222;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c9 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c11 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c11:hover,
.c11:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c11:visited {
  color: #6E6E73;
}

@media (max-width:24.9375rem) {
  .c4 {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    width: 33.33%;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:25rem) {
  .c3 {
    position: absolute;
    bottom: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c12 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c9 {
    width: 66.67%;
  }
}

@supports (display:grid) {
  .c9 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <img
        alt="Alt text"
        src="https://foobar.com/image.png"
      />
      <div
        class="c3"
      >
        <div
          aria-hidden="true"
          class="c4"
        >
          <div
            class="c5"
          >
            <svg
              class="c6"
              focusable="false"
              height="12px"
              viewBox="0 0 32 32"
              width="12px"
            >
              <polygon
                points="3,32 29,16 3,0"
              />
            </svg>
            <span
              class="c7"
            >
              Video 2 minutes 15 seconds
            </span>
            <time
              class="c8"
              datetime="PT2M15S"
            >
              2:15
            </time>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c9"
  >
    <h3
      class="c10"
    >
      <a
        class="c11"
        href="https://www.bbc.co.uk/news"
      >
        The headline of the promo
      </a>
    </h3>
    <p
      class="c12"
    >
      The summary of the promo
    </p>
    <time>
      12 March 2019
    </time>
  </div>
</div>
`;
